--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "pallo/web-image",
     "description": "Image library integration for a Pallo web application",
     "license": "MIT",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "authors": [
         {
             "name": "Joris Vandeweerd",
@@ -14,5 +14,11 @@
         "pallo/app-image": ">=0.1.0",
         "pallo/lib-image": ">=0.1.0",
         "pallo/web": ">=0.2.0"
-    } 
+    }, 
+    "autoload": {
+        "psr-0": {
+            "pallo\\application\\cache\\control\\": ["src/", "test/src/"],
+            "pallo\\web\\image\\": ["src/", "test/src/"]
+        }
+    }
 }
