--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "pallo/web-image",
-    "description": "Image library integration for a Pallo web application",
+    "name": "ride/web-image",
+    "description": "Image library integration for a Ride web application",
     "license": "MIT",
     "version": "0.2.0",
     "authors": [
@@ -10,15 +10,15 @@
         }
     ],
     "require": {
-        "pallo/app": ">=0.4.0",
-        "pallo/app-image": ">=0.1.0",
-        "pallo/lib-image": ">=0.2.0",
-        "pallo/web": ">=0.2.0"
+        "ride/app": ">=0.4.0",
+        "ride/app-image": ">=0.1.0",
+        "ride/lib-image": ">=0.2.0",
+        "ride/web": ">=0.2.0"
     }, 
     "autoload": {
         "psr-0": {
-            "pallo\\application\\cache\\control\\": ["src/", "test/src/"],
-            "pallo\\web\\image\\": ["src/", "test/src/"]
+            "ride\\application\\cache\\control\\": ["src/", "test/src/"],
+            "ride\\web\\image\\": ["src/", "test/src/"]
         }
     }
 }
