--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,14 @@
     ],
     "require": {
         "ride/app": ">=0.4.0",
-        "ride/app-image": ">=0.1.0",
-        "ride/lib-image": ">=0.2.0",
+        "ride/app-image": ">=0.3.0",
+        "ride/lib-image": ">=0.5.0",
         "ride/web": ">=0.2.0"
     }, 
     "autoload": {
         "psr-0": {
-            "ride\\application\\cache\\control\\": ["src/", "test/src/"],
-            "ride\\web\\image\\": ["src/", "test/src/"]
+            "ride\\application\\cache\\control\\": ["src/"],
+            "ride\\web\\image\\": ["src/"]
         }
     }
 }
