--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "ride/web-image",
     "description": "Image library integration for a Ride web application",
     "license": "MIT",
-    "version": "0.9.1",
     "authors": [
         {
             "name": "Joris Vandeweerd",
@@ -10,10 +9,10 @@
         }
     ],
     "require": {
-        "ride/app": ">=0.7.0",
-        "ride/app-image": ">=0.4.0",
-        "ride/lib-image": ">=0.7.0",
-        "ride/web": ">=0.2.0"
+        "ride/app": "^1.0.0",
+        "ride/app-image": "^1.0.0",
+        "ride/lib-image": "^1.0.0",
+        "ride/web": "^1.0.0"
     },
     "autoload": {
         "psr-0": {
